# Containerization

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: download_data.py  main.py
src/config/: settings.py
src/database/: engine.py
src/models/: pydantic_models.py  sqlalchemy_models.py
src/services/: data_loader.py  downloader.py  preprocess.py
src/utils/: logger.py
